# sap_core

./: CMakeLists.txt  README.md
benchmarks/: allocator_benchmarks.cpp
cmake/: sap_core_config.cmake.in
include/: log.h  result.h  timestamp.h
include/sap_core/: clock.h  guid.h  job_system.h  platform.h  result.h  serialization.h  timer.h  types.h
include/sap_core/async/: README.md  executor.h  sleep_for.h  spawn.h  stop_token.h  sync_wait.h  task.h  when_all.h
include/sap_core/io/: README.md  event.h  reactor.h
include/sap_core/stl/: algorithm.h  allocator.h  arena.h  array.h  atomic.h  bitset.h  chrono.h  condition_variable.h  coroutine.h  csignal.h  cstddef.h  cstdio.h  cstdlib.h  cstring.h  deque.h  exception.h  filesystem.h  fixed_string.h  format.h  fstream.h  functional.h  generational.h  iostream.h  limits.h  map.h  mutex.h  optional.h  queue.h  random.h  result.h  semaphore.h  shared_ptr.h  span.h  spsc_queue.h  sstream.h  stack_allocator.h  string.h  string_view.h  system_error.h  thread.h  (+6 more)
src/: guid.cpp  job_system.cpp  posix_clock.cpp  serialization.cpp  timer.cpp  windows_clock.cpp
src/async/: executor.cpp  sleep_linux.cpp  sleep_windows.cpp
src/io/: epoll_reactor.cpp  iocp_reactor.cpp
tests/: allocator_tests.cpp  arena_tests.cpp  cancellation_tests.cpp  clock_tests.cpp  container_tests.cpp  executor_tests.cpp  fixed_string_tests.cpp  generational_tests.cpp  job_system_tests.cpp  reactor_tests.cpp  result_tests.cpp  serialization_tests.cpp  smart_ptr_tests.cpp  spawn_tests.cpp  spsc_queue_tests.cpp  stack_allocator_tests.cpp  task_tests.cpp  timer_tests.cpp  types_tests.cpp  when_all_tests.cpp
